test/types/records/split-init/error-never-initialized-values-mentioned3.chpl
class C { }

proc error() {
  // These have invalid split inits
  var c2: C;

  writeln(c2);

  c2 = new owned C();
}
error();
